[package]
name = "voxel-water"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17"
winit = "0.28"
cfg-if = "1"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
nalgebra = { version = "0.32.3", features = ["bytemuck"] }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
rand_core = "0.6.4"
egui_wgpu_backend = "0.26"
egui = "0.23"
egui_winit_platform = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release-with-debug]
inherits = "release"
debug = true
